# FIXable

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-format-check.yml  cmake-single-platform.yml
cmake/: clang-cxx-dev-tools.cmake
include/fix/: DefaultFixMessageHandler.h  FixEncoder.h  FixField.h  FixMessage.h  FixMessageDispatcher.h  FixMessageHandler.h  FixParser.h  FixSessionManager.h  FixSessionState.h
include/fix/handlers/: DefaultFixMessageHandler.h  FixMessageHandler.h  LogonFixMessageHandler.h  TestRequestFixMessageHandler.h
include/net/: TCPClient.h  TCPServer.h
src/: main.cpp  mainClient.cpp  mainServer.cpp
src/fix/: DefaultFixMessageHandler.cpp  FixEncoder.cpp  FixMessage.cpp  FixMessageDispatcher.cpp  FixParser.cpp  FixSessionManager.cpp
src/fix/handlers/: DefaultFixMessageHandler.cpp  LogonFixMessageHandler.cpp  TestRequestFixMessageHandler.cpp
src/net/: TCPClient.cpp  TCPServer.cpp
test/: CMakeLists.txt  FixEncoderTest.cpp  FixMessageTest.cpp  FixParserTest.cpp
